--- a/PharmacyDeliverySystem/appsettings.json
+++ b/PharmacyDeliverySystem/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=196.221.145.204;Database=PharmacyDelivery;User Id=R3;Password=123;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
