--- a/PharmacyDeliverySystem/PharmacyDeliverySystem.csproj
+++ b/PharmacyDeliverySystem/PharmacyDeliverySystem.csproj
@@ -16,4 +16,9 @@
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\PharmacyDeliverySystem.Business\PharmacyDeliverySystem.Business.csproj" />
+
+    </ItemGroup>
+
 </Project>
