--- a/PharmacyDeliverySystem.Business/PharmacyDeliverySystem.Business.csproj
+++ b/PharmacyDeliverySystem.Business/PharmacyDeliverySystem.Business.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="QRCoder" Version="1.7.0" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\PharmacyDeliverySystem.DataAccess\PharmacyDeliverySystem.DataAccess.csproj" />
 
     </ItemGroup>
