--- a/PharmacyDeliverySystem.DataAccess/PharmacyDeliverySystem.DataAccess.csproj
+++ b/PharmacyDeliverySystem.DataAccess/PharmacyDeliverySystem.DataAccess.csproj
@@ -18,6 +18,7 @@
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+      <PackageReference Include="QRCoder" Version="1.7.0" />
     </ItemGroup>
 
 </Project>
