UI Enhancements: Updated overall design, added pharmacy logo, introduced new category pages (WomanCare, Fitness, Makeup), and improved chat layout for customer and pharmacist.

--- a/PharmacyDeliverySystem/PharmacyDeliverySystem.csproj
+++ b/PharmacyDeliverySystem/PharmacyDeliverySystem.csproj
@@ -22,4 +22,13 @@
 
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="wwwroot\images\icons\medicine-logo.svg">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Update="wwwroot\images\icons\product-default.svg">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
