--- a/PharmacyDeliverySystem/PharmacyDeliverySystem.csproj
+++ b/PharmacyDeliverySystem/PharmacyDeliverySystem.csproj
@@ -7,6 +7,25 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Views\NewFolder1\**" />
+      <Compile Remove="Views\NewFolder\**" />
+      <Content Remove="Views\NewFolder1\**" />
+      <Content Remove="Views\NewFolder\**" />
+      <EmbeddedResource Remove="Views\NewFolder1\**" />
+      <EmbeddedResource Remove="Views\NewFolder\**" />
+      <None Remove="Views\NewFolder1\**" />
+      <None Remove="Views\NewFolder\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Views\PharmacyAuth\List.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="Views\PharmacyAuth\List.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
@@ -29,6 +48,10 @@
       <Content Update="wwwroot\images\icons\product-default.svg">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="NewFolder\" />
     </ItemGroup>
 
 </Project>
